fix overflow title r2c

--- a/css/responsive.css
+++ b/css/responsive.css
@@ -2006,8 +2006,8 @@
         transition: all .3s;
     }
     .block-product-r2c .owl-carousel .owl-stage-outer {
-        margin: -35px;
-        padding: 35px;
+        margin: 0 -35px;
+        padding: 0 35px;
     }
 }
 
